--- a/styles.css
+++ b/styles.css
@@ -4038,7 +4038,8 @@ html {
   .image-parallax {
     min-width: 100%;
     position: relative;
-    top: -3rem;
+    top: auto;
+    /* top: -3rem; */
   }
   
   .trigger {
@@ -4469,7 +4470,8 @@ html {
       grid-column-gap: 2rem;
       grid-row-gap: 2rem;
       grid-template-rows: auto;
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: repeat(3, 1fr);
+      /* grid-template-columns: 1fr 1fr; */
       grid-auto-columns: 1fr;
       display: grid;
     }
